campgrounds view route setup

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -10,7 +10,7 @@
     <h1>All Campgrounds</h1>
     <ul>
       <% for (let campground of campgrounds) {%>
-      <li><%= campground.title %></li>
+      <li><%= campground.title %> - <a href="campgrounds/<%=campground._id%>"">View</a></li>
       <% } %>
     </ul>
   </body>
