--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -9,6 +9,6 @@
   <body>
     <h1><%= campground.title %></h1>
     <h2><%= campground.location %></h2>
-    <a href="/campgrounds">Back to Campgrounds</a>
+    <a href="/campgrounds">All Campgrounds</a>
   </body>
 </html>
