refactored edit and update routes

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -23,7 +23,7 @@
     </form>
 
     <footer>
-        <a href="/campgrounds">All Campgrounds</a>
+        <a href="/campgrounds/<%= campground._id %>">Back to Campground</a>
     </footer>
   </body>
 </html>
