--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -10,6 +10,9 @@
     <h1><%= campground.title %></h1>
     <h2><%= campground.location %></h2>
     <a href="/campgrounds/<%= campground._id %>/edit">Edit Campground</a>
+    <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+      <button>Delete Campground</button>
+    </form>
     <a href="/campgrounds">All Campgrounds</a>
   </body>
 </html>
