--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,10 +1,31 @@
 <% layout('layouts/boilerplate')%>
-<h1><%= campground.title %></h1>
-<h2><%= campground.location %></h2>
-<img src="<%= campground.image %>" alt="" srcset="">
-<p><%= campground.description %></p>
-<a href="/campgrounds/<%= campground._id %>/edit">Edit Campground</a>
-<form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-  <button>Delete Campground</button>
-</form>
-<a href="/campgrounds">All Campgrounds</a>
+  <div class="row">
+    <div class="col-6 offset-3">
+      <div class="card">
+        <img src="<%= campground.image %>" class="card-img-top" alt="...">
+        <div class="card-body mb-3">
+          <h5 class="card-title">
+            <%= campground.title %>
+          </h5>
+          <p class="card-text">
+            <%= campground.description %>
+          </p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item text-muted">
+            <%= campground.location %>
+          </li>
+          <li class="list-group-item">$<%= campground.price %>/night</li>
+        </ul>
+        <div class="card-body">
+          <a class="card-link btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit Campground</a>
+          <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+            <button class="btn btn-danger">Delete Campground</button>
+          </form>
+          <div class="card-footer">
+            2 days ago
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
