--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,30 +3,36 @@
 
         <h1 class="text-center">New Campground</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds" method="POST">
+            <form action="/campgrounds" method="POST" novalidate class="validated-form">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
-                    <input class="form-control" type="text" name="campground[title]" id="title" />
+                    <input class="form-control" type="text" name="campground[title]" id="title" required />
+                    <div class="valid-feedback">
+                        Looks Good!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="location">Location</label>
-                    <input class="form-control" type="text" name="campground[location]" id="location" />
+                    <input class="form-control" type="text" name="campground[location]" id="location" required />
+                    <div class="invalid-feedback">
+                        Location is required
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image Url</label>
-                    <input class="form-control" type="text" name="campground[image]" id="image" />
+                    <input class="form-control" type="text" name="campground[image]" id="image" required />
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="price">Price</label>
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="price-label">$</span>
                         <input type="text" class="form-control" placeholder="0.00" aria-label="Price"
-                            aria-describedby="price-label" id="price" name="campground[price]">
+                            aria-describedby="price-label" id="price" name="campground[price]" required>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
-                    <textarea class="form-control" name="campground[description]" id="description"></textarea>
+                    <textarea class="form-control" name="campground[description]" id="description" required></textarea>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-success">Add Campground</button>
