--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -40,5 +40,14 @@
         </div>
         <button class="btn btn-success">Submit</button>
       </form>
+      <h2>Reviews</h2>
+      <% campground.reviews.forEach(review=> { %>
+        <div class="mb-3">
+          <p>Rating: <%= review.rating%>
+          </p>
+          <p>Review: <%= review.body%>
+          </p>
+        </div>
+        <% }) %>
     </div>
   </div>
