--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -50,6 +50,9 @@
             </h5>
             <p class="card-text">Review: <%= review.body%>
             </p>
+            <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+              <button class="btn btn-danger">Delete</button>
+            </form>
           </div>
         </div>
 
