--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -34,33 +34,40 @@
       </div>
     </div>
     <div class="col-6">
-      <h2>Leave a Review</h2>
-      <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
-        <div class="mb-3">
-          <label for="rating" class="form-label">Rating</label>
-          <input type="range" min="1" max="5" name="review[rating]" id="rating" class="form-range">
-        </div>
-        <div class="mb-3">
-          <label for="body" class="form-label">Review</label>
-          <textarea name="review[body]" id="body" cols="30" rows="3" class="form-control" required></textarea>
-          <div class="valid-feedback">Looks Good!</div>
-        </div>
-        <button class="btn btn-success">Submit</button>
-      </form>
-      <h2>Reviews</h2>
-      <% campground.reviews.forEach(review=> { %>
-        <div class="card mb-3">
-          <div class="card-body">
-            <h5 class="card-title">Rating: <%= review.rating%>
-            </h5>
-            <p class="card-text">Review: <%= review.body%>
-            </p>
-            <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
-              <button class="btn btn-danger">Delete</button>
-            </form>
+      <% if(currentUser) { %>
+        <h2>Leave a Review</h2>
+        <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
+          <div class="mb-3">
+            <label for="rating" class="form-label">Rating</label>
+            <input type="range" min="1" max="5" name="review[rating]" id="rating" class="form-range">
           </div>
-        </div>
+          <div class="mb-3">
+            <label for="body" class="form-label">Review</label>
+            <textarea name="review[body]" id="body" cols="30" rows="3" class="form-control" required></textarea>
+            <div class="valid-feedback">Looks Good!</div>
+          </div>
+          <button class="btn btn-success">Submit</button>
+        </form>
+        <% } %>
+          <h2>Reviews</h2>
+          <% campground.reviews.forEach(review=> { %>
+            <div class="card mb-3">
+              <div class="card-body">
+                <h5 class="card-title">Rating: <%= review.rating%>
+                </h5>
+                <h6 class="card-subtitle mb-2 text-muted">By <%= review.author.username %>
+                </h6>
+                <p class="card-text">Review: <%= review.body%>
+                </p>
+                <% if (currentUser && review.author.equals(currentUser)) { %>
+                  <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
+                    method="POST">
+                    <button class="btn btn-danger">Delete</button>
+                  </form>
+                  <% } %>
+              </div>
+            </div>
 
-        <% }) %>
+            <% }) %>
     </div>
   </div>
