--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,7 +3,7 @@
 
         <h1 class="text-center">New Campground</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds" method="POST" novalidate class="validated-form">
+            <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" name="campground[title]" id="title" required />
@@ -18,10 +18,11 @@
                         Location is required
                     </div>
                 </div>
-                <div class="mb-3">
+                <input type="file" name="image" id="" multiple>
+                <!-- <div class="mb-3">
                     <label class="form-label" for="image">Image Url</label>
                     <input class="form-control" type="text" name="campground[image]" id="image" required />
-                </div>
+                </div> -->
                 <div class="mb-3">
                     <label class="form-label" for="price">Price</label>
                     <div class="input-group mb-3">
